[gd_scene load_steps=4 format=3 uid="uid://bwr8nxso3aith"]

[ext_resource type="Script" uid="uid://nm2ey8bdlakb" path="res://Scripts/UI/reward_screen.gd" id="1_fx078"]
[ext_resource type="PackedScene" uid="uid://dtjhxwabfqgjv" path="res://Scenes/UI/RewardCard.tscn" id="2_ly5bm"]
[ext_resource type="PackedScene" uid="uid://cbl0o4v48fddq" path="res://Scenes/UI/HeroTargetButton.tscn" id="3_eklcw"]

[node name="RewardScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_fx078")
reward_card_scene = ExtResource("2_ly5bm")
hero_target_button_scene = ExtResource("3_eklcw")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -127.0
offset_right = 127.0
offset_bottom = 23.0
grow_horizontal = 2
text = "Vit√≥ria! Escolha sua recompensa."

[node name="RewardHBoxContainer" type="HBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -274.0
offset_bottom = -274.0
grow_horizontal = 2
grow_vertical = 2

[node name="HeroHBoxContainer" type="HBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="HeroLabel" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -50.5
offset_right = 20.0
offset_bottom = -27.5
grow_horizontal = 2
grow_vertical = 2
text = "Adicionar habilidade para:"
